fix: FE BootcampManagement -> alignment & hover on btn

--- a/frontend/src/components/Forms/AddNewBootcampForm.css
+++ b/frontend/src/components/Forms/AddNewBootcampForm.css
@@ -4,12 +4,23 @@
 }
 
 .auto-table {
-    width: 98%;
+    width: 97%;
     /* table-layout: auto; */
 }
+.auto-table tr th{
+    text-align: center;
+}
+
+.newbootcamp-title-container{
+    padding: .5rem 0 .9rem .3rem;
+}
+    .newbootcamp-title{
+        font-size: 1.2rem;
+    }
 
 .input-cell {
     padding-right: 0.75rem;
+    
 }
 
 .date-cell {
@@ -47,7 +58,14 @@
     margin-left: 0.5rem;
     padding: 0.3rem .7rem;
     border-radius: 0.375rem;
-    color: #10b981;
+    color: #21d34e;
 
-    background-color: #06241a;
+    background-color: #06240d;
+    transition: all 150ms ease;
+}
+
+.add-button:hover {
+    color: #54df77;
+    background-color: #12341a;
+    transition: all 150ms ease;
 }
