--- a/frontend/src/pages/BootcampManagement/BootcampManagement.css
+++ b/frontend/src/pages/BootcampManagement/BootcampManagement.css
@@ -53,8 +53,13 @@
         width: 100%;
         table-layout: auto;
     }
+    .table-auto th {
+        text-align: center;
+    }
         .table-cell {
-            padding-right: 0.75rem;
+            /* padding-right: 0.75rem; */
+            padding-left: .75rem;
+            
         }
             .date-input {
                 margin-top: 0.25rem;
@@ -98,6 +103,12 @@
                 left: 100%;
 
                 background-color: #301313;
+                transition: all 150ms ease;
+            }
+            .delete-btn:hover {
+                color: #ff5c5c;
+                background-color: #461d1d;
+                transition: all 150ms ease;
             }
 
 
@@ -107,6 +118,7 @@
     justify-content: flex-end;
     padding: 1.5rem;
     border-top: 1px solid #e2e8f02f;
+    
     border-bottom-left-radius: 0.375rem;
     border-bottom-right-radius: 0.375rem;
 }
